# cuda-zero-to-hero

./: CMakeLists.txt  README.md  simple_kernel.cu  test_simple.py
